convertendo svg para png

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
-
+  <script type="module">
+    import canvg from 'https://cdn.skypack.dev/canvg';
+  </script>
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
